# ZebraFlash

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp  motion_detector.cpp  motion_detector.h
benchmark/: benchmark.cpp  benchmark.h
config/: params_input_file.yml
frame-grabber/: frame_grabber.cpp  frame_grabber.h
motion-detector/: motion_detector.cpp  motion_detector.h
tests/: test_application.cpp
thread-pool/: thread_pool.cpp  thread_pool.h
utils/: algorithm.cpp  algorithm.h  motion_utils.cpp  motion_utils.h
